--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,15 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
+      - devel
+      - stage
+      - prod
+
   pull_request:
     branches:
-      - main 
+      - devel
+      - stage
+      - prod
 
 env:
     BUCKET_DEVEL: 'app-devel-site'
